--- a/less/about.less
+++ b/less/about.less
@@ -69,7 +69,9 @@
                     padding: .5rem;
                     align-content: center;
                 }
-            
+                .info {
+                    width: 70%;
+                }
                 img {
                     flex-wrap:wrap;
                     flex-direction: column;
